k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency-app
  template:
    metadata:
      labels:
        app: currency-app
    spec:
      containers:
      - name: currency-app
        image: ogcccr.azurecr.io/myapp:latest
        ports:
        - containerPort: 80
