k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: currency-service

spec:
  type: ClusterIP

  selector:
    app: currency-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
