k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: currency-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - riskybusiness.online
    secretName: tls-secret

  rules:
  - host: riskybusiness.online

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: currency-service
            port:
              number: 80
